Fully implement Reroll Player mod
- Players can now reroll from the death and pause menus
- Rerolling resets the player and some world aspects, and teleports them 1k+ blocks
- Removed Initial Inventory due to no longer needing
- Waiting on some fixes and features

--- a/oresources/reroll/lang/en_us.lang
+++ b/oresources/reroll/lang/en_us.lang
@@ -10,11 +10,13 @@ commands.reroll.player.lock=Reroll locked for %s.
 commands.reroll.player.locked=%s has reroll locked. Use '/reroll unlock <player>' to unlock.
 commands.reroll.player.rerolled=You have been rerolled! Good luck.
 commands.reroll.player.unlock=Reroll unlocked for %s.
-commands.reroll.self=You have been given a new life, runner.
+commands.reroll.self=§4You have been given a new life, runner.
 commands.reroll.self.lock=Reroll locked.
 commands.reroll.self.locked=Reroll locked. Use '/reroll unlock' to unlock yourself.
 commands.reroll.self.unlock=Reroll unlocked. Be careful!
-commands.reroll.all=You have been given new lives, runners.
+commands.reroll.all=§4You have been given new lives, runners.
+commands.reroll.max_tries=Failed to find a valid reroll position. Please try again.
+
 
 item.reroll.dice.name=Reroll Dice
 reroll.dice.tooltip.description=Use this item to reroll.
