Add new reset world buttons for servers only
Players on servers should now reroll to the same position

--- a/oresources/reroll/lang/en_us.lang
+++ b/oresources/reroll/lang/en_us.lang
@@ -8,7 +8,7 @@ commands.reroll.playernotfound=Player %s doesn't exist.
 commands.reroll.player=You have been given a new life, %s.
 commands.reroll.player.lock=Reroll locked for %s.
 commands.reroll.player.locked=%s has reroll locked. Use '/reroll unlock <player>' to unlock.
-commands.reroll.player.rerolled=You have been rerolled! Good luck.
+commands.reroll.player.rerolled=
 commands.reroll.player.unlock=Reroll unlocked for %s.
 commands.reroll.self=§4You have been given a new life, runner.
 commands.reroll.self.lock=Reroll locked.
