The Veils of The Nether Update, pt 3
- Added Quality Tools

- Added and changed some sounds, including ambient and cave sounds.
- Changed boss health bars to look cool
- Added new fancy tooltip borders for the best items for each dimension
- Improved torch texture, now animated while in hand
- Reduced the chance that all zombies and pigmen will drop gear by half
- Reduced default music volume
- Changed loading screen tips
- Removed infernium finder (since the ore glows now)

--- a/oresources/minecraft/lang/en_us.lang
+++ b/oresources/minecraft/lang/en_us.lang
@@ -1377,7 +1377,7 @@ entity.ZombieVillager.name=Zombie Villager
 entity.VillagerGolem.name=Iron Golem
 entity.SnowMan.name=Snow Golem
 entity.EnderDragon.name=Ender Dragon
-entity.WitherBoss.name=Wither
+entity.WitherBoss.name=The Wither
 entity.Witch.name=Witch
 entity.Guardian.name=Guardian
 entity.ElderGuardian.name=Elder Guardian
