Veils of the Nether Update, pt 5
- Added Champions
- All champions drop heart containers or crystals and lots of XP
- Removed Blights
- Removed infernium finder from jei
- Renamed zombie pigmen, dark zombie, bloody zombie, and festive creeper
- Adjusted and added tooltips and names for some items
- Wither now drops veilstrium ingots (so players can remake any broken armor b4 the erebus)
- More loading screen tips

--- a/oresources/minecraft/lang/en_us.lang
+++ b/oresources/minecraft/lang/en_us.lang
@@ -1364,7 +1364,7 @@ entity.Zombie.name=Zombie
 entity.Husk.name=Husk
 entity.Slime.name=Slime
 entity.Ghast.name=Ghast
-entity.PigZombie.name=Zombie Pigman
+entity.PigZombie.name=Dreadswine
 entity.Enderman.name=Enderman
 entity.Endermite.name=Endermite
 entity.Silverfish.name=Silverfish
