Lots of fixes/tweaks, new spawn anchor item
- keybinding adjustment
- added Soul Anchor, which is given at the start of every dim (except nether) and sets your spawn point when right clicked (prevents players from falling through the barrier when respawning after dying)
- all important loot from the wither will now directly be added to each players inventory instead of dropping
- reduced volume of controlled chaos
- changed mc lang
- fixed bug meat recipe
- increased duration of launch from riftbreaker
- made soul sand blast proof (for the wither structure)

--- a/oresources/minecraft/lang/en_us.lang
+++ b/oresources/minecraft/lang/en_us.lang
@@ -833,7 +833,7 @@ tile.bed.occupied=This bed is occupied
 tile.bed.noSleep=You can only sleep at night
 tile.bed.tooFarAway=You may not rest now, the bed is too far away
 tile.bed.notSafe=You may not rest now, there are monsters nearby
-tile.bed.notValid=Your home bed was missing or obstructed
+tile.bed.notValid=Your spawn point was missing or obstructed
 tile.lockedchest.name=Locked chest
 tile.trapdoor.name=Wooden Trapdoor
 tile.ironTrapdoor.name=Iron Trapdoor
