--- a/oresources/minecraft/lang/en_us.lang
+++ b/oresources/minecraft/lang/en_us.lang
@@ -208,7 +208,7 @@ selectWorld.mapFeatures.info=Villages, dungeons etc
 selectWorld.mapType=World Type:
 selectWorld.mapType.normal=Normal
 selectWorld.allowCommands=Allow Cheats:
-selectWorld.allowCommands.info=Commands like /gamemode, /xp
+selectWorld.allowCommands.info=
 selectWorld.hardcoreMode=Hardcore:
 selectWorld.hardcoreMode.info=World is deleted upon death
 selectWorld.bonusItems=Bonus Chest:
