--- a/oresources/reroll/lang/en_us.lang
+++ b/oresources/reroll/lang/en_us.lang
@@ -10,11 +10,11 @@ commands.reroll.player.lock=Reroll locked for %s.
 commands.reroll.player.locked=%s has reroll locked. Use '/reroll unlock <player>' to unlock.
 commands.reroll.player.rerolled=
 commands.reroll.player.unlock=Reroll unlocked for %s.
-commands.reroll.self=§4You have been given a new life, runner.
+commands.reroll.self=§4A new soul awakens. In this eternal cycle, you are but fleeting shadows, Runner. 
 commands.reroll.self.lock=Reroll locked.
 commands.reroll.self.locked=Reroll locked. Use '/reroll unlock' to unlock yourself.
 commands.reroll.self.unlock=Reroll unlocked. Be careful!
-commands.reroll.all=§4You have been given new lives, runners.
+commands.reroll.all=§4New souls awaken. In this eternal cycle, you are but fleeting shadows, Runners. 
 commands.reroll.max_tries=Failed to find a valid reroll position. Please try again.
 
 
