--- a/oresources/minecraft/lang/en_us.lang
+++ b/oresources/minecraft/lang/en_us.lang
@@ -197,8 +197,8 @@ selectWorld.gameMode.spectator=Spectator
 selectWorld.gameMode.spectator.line1=You can look but don't touch
 selectWorld.gameMode.spectator.line2=
 selectWorld.gameMode.hardcore=Hardcore
-selectWorld.gameMode.hardcore.line1=One life.
-selectWorld.gameMode.hardcore.line2=One chance.
+selectWorld.gameMode.hardcore.line1=No rebirthing.
+selectWorld.gameMode.hardcore.line2=
 selectWorld.gameMode.adventure=Adventure
 selectWorld.gameMode.adventure.line1=Same as survival mode, but blocks can't
 selectWorld.gameMode.adventure.line2=be added or removed
