misc changes, changes to "684"

--- a/oresources/minecraft/lang/en_us.lang
+++ b/oresources/minecraft/lang/en_us.lang
@@ -38,7 +38,7 @@ menu.disconnect=Disconnect
 menu.returnToGame=Continue Running
 menu.generatingLevel=Building monstrosities...
 menu.loadingLevel=Planning your death...
-menu.generatingTerrain=Creating nightmares...
+menu.generatingTerrain=
 menu.convertingLevel=Converting world
 menu.respawning=Respawning
 menu.shareToLan=Open to LAN
