--- a/oresources/minecraft/lang/en_us.lang
+++ b/oresources/minecraft/lang/en_us.lang
@@ -1369,7 +1369,7 @@ entity.Enderman.name=Enderman
 entity.Endermite.name=Endermite
 entity.Silverfish.name=Silverfish
 entity.CaveSpider.name=Cave Spider
-entity.Blaze.name=Infernal
+entity.Blaze.name=Infernal Wraith
 entity.LavaSlime.name=Magma Cube
 entity.MushroomCow.name=Mooshroom
 entity.Villager.name=Villager
