Ghasts are so 2010, Nether Wraiths are in
Renamed Ghasts (and items) to Nether Wraiths
Added Nether Wraith Entry

--- a/oresources/minecraft/lang/en_us.lang
+++ b/oresources/minecraft/lang/en_us.lang
@@ -1176,7 +1176,7 @@ item.shears.name=Shears
 item.rottenFlesh.name=Rotten Flesh
 item.enderPearl.name=Ender Pearl
 item.blazeRod.name=Blaze Rod
-item.ghastTear.name=Ghast Tear
+item.ghastTear.name=Nether Wraith Tear
 item.netherStalkSeeds.name=Nether Wart
 item.potion.name=Potion
 item.splash_potion.name=Splash Potion
@@ -1363,7 +1363,7 @@ entity.Giant.name=Giant
 entity.Zombie.name=Zombie
 entity.Husk.name=Husk
 entity.Slime.name=Slime
-entity.Ghast.name=Ghast
+entity.Ghast.name=Nether Wraith
 entity.PigZombie.name=Dreadswine
 entity.Enderman.name=Enderman
 entity.Endermite.name=Endermite
@@ -3103,10 +3103,10 @@ subtitles.entity.generic.hurt=Something hurts
 subtitles.entity.generic.small_fall=Something tripped
 subtitles.entity.generic.splash=Splashing
 subtitles.entity.generic.swim=Swimming
-subtitles.entity.ghast.ambient=Ghast cries
-subtitles.entity.ghast.death=Ghast dies
-subtitles.entity.ghast.hurt=Ghast hurts
-subtitles.entity.ghast.shoot=Ghast shoots
+subtitles.entity.ghast.ambient=Nether Wraith cries
+subtitles.entity.ghast.death=Nether Wraith dies
+subtitles.entity.ghast.hurt=Nether Wraith hurts
+subtitles.entity.ghast.shoot=Nether Wraith shoots
 subtitles.entity.guardian.ambient.land=Guardian flaps
 subtitles.entity.guardian.ambient=Guardian moans
 subtitles.entity.guardian.attack=Guardian shoots
@@ -3408,7 +3408,7 @@ advancements.nether.get_wither_skull.description=Obtain a wither skeleton's skul
 advancements.nether.obtain_blaze_rod.title=Into Fire
 advancements.nether.obtain_blaze_rod.description=Relieve a Blaze of its rod
 advancements.nether.return_to_sender.title=Return to Sender
-advancements.nether.return_to_sender.description=Destroy a Ghast with a fireball
+advancements.nether.return_to_sender.description=Destroy a Nether Wraith with a fireball
 advancements.nether.root.title=Nether
 advancements.nether.root.description=Bring summer clothes
 advancements.nether.summon_wither.title=Withering Heights
@@ -3416,7 +3416,7 @@ advancements.nether.summon_wither.description=Summon the Wither
 advancements.nether.fast_travel.title=Subspace Bubble
 advancements.nether.fast_travel.description=Use the Nether to travel 7km in the Overworld
 advancements.nether.uneasy_alliance.title=Uneasy Alliance
-advancements.nether.uneasy_alliance.description=Rescue a Ghast from the Nether, bring it safely home to the Overworld... and then kill it.
+advancements.nether.uneasy_alliance.description=Rescue a Nether Wraith from the Nether, bring it safely home to the Overworld... and then kill it.
 
 advancements.story.cure_zombie_villager.title=Zombie Doctor
 advancements.story.cure_zombie_villager.description=Weaken and then cure a zombie villager
