rename blaze again

--- a/oresources/minecraft/lang/en_us.lang
+++ b/oresources/minecraft/lang/en_us.lang
@@ -1369,7 +1369,7 @@ entity.Enderman.name=Enderman
 entity.Endermite.name=Endermite
 entity.Silverfish.name=Silverfish
 entity.CaveSpider.name=Cave Spider
-entity.Blaze.name=Infernal Wraith
+entity.Blaze.name=Infernal Sentinel
 entity.LavaSlime.name=Magma Cube
 entity.MushroomCow.name=Mooshroom
 entity.Villager.name=Villager
@@ -2998,11 +2998,11 @@ subtitles.entity.bat.ambient=Bat screeches
 subtitles.entity.bat.death=Bat dies
 subtitles.entity.bat.hurt=Bat hurts
 subtitles.entity.bat.takeoff=Bat takes off
-subtitles.entity.blaze.ambient=Blaze breathes
-subtitles.entity.blaze.burn=Blaze crackles
-subtitles.entity.blaze.death=Blaze dies
-subtitles.entity.blaze.hurt=Blaze hurts
-subtitles.entity.blaze.shoot=Blaze shoots
+subtitles.entity.blaze.ambient=Infernal Sentinel breathes
+subtitles.entity.blaze.burn=Infernal Sentinel crackles
+subtitles.entity.blaze.death=Infernal Sentinel dies
+subtitles.entity.blaze.hurt=Infernal Sentinel hurts
+subtitles.entity.blaze.shoot=Infernal Sentinel shoots
 subtitles.entity.bobber.splash=Fishing hook splashes
 subtitles.entity.bobber.throw=Bobber thrown
 subtitles.entity.cat.ambient=Cat meows
