--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,11 @@
-§lTREPIDATION v0.4.2§r
+§lTREPIDATION v0.5.4§r
 
 §eClick the version number on the main menu for full changelog.§r
 
 §a§lKnown Issues§r§r
-- Some Erebus structures rarely spawn high up and replace the barrier
+- Rarely, Erebus structures will spawn high up and replace the barrier
+- Creating a 2nd world or rejoining the same world in the same game session will cause a crash. Use the “Reset Run” button to avoid needing to create new worlds.
+Multiplayer Only:
 - Players joining in multiplayer sessions do not spawn at the same place (reset run to fix this). Players also sometimes permanently spawn in different locations on each reset
-- Certain actions in multiplayer sometimes trigger many times for all players (ie, killing the wither spams item rewards and chat messages)
+- The Journal isn’t available when first joining a server. Dying and respawning seems to fix this.
+
