rename ashen warden to ashen oracle

--- a/oresources/da/lang/en_us.lang
+++ b/oresources/da/lang/en_us.lang
@@ -5,7 +5,7 @@ entity.spore_bomb.name=Spore Bomb
 entity.spore_cloud.name=Spore Cloud
 entity.void_spike.name=Void Blossom's Spike
 entity.nether_aberant.name=Ashen Revenant
-entity.flame_knight.name=Ashen Warden
+entity.flame_knight.name=Ashen Oracle
 entity.pearl_projectile.name=Charged Ender Pearl
 entity.aoe_tile.name=Ambitious Flame
 entity.flame_sling.name=Flame Sling
