fixed empty line when reset run

--- a/oresources/reroll/lang/en_us.lang
+++ b/oresources/reroll/lang/en_us.lang
@@ -8,7 +8,7 @@ commands.reroll.playernotfound=Player %s doesn't exist.
 commands.reroll.player=You have been given a new life, %s.
 commands.reroll.player.lock=Reroll locked for %s.
 commands.reroll.player.locked=%s has reroll locked. Use '/reroll unlock <player>' to unlock.
-commands.reroll.player.rerolled=
+commands.reroll.player.rerolled=Rerolled successfully.
 commands.reroll.player.unlock=Reroll unlocked for %s.
 commands.reroll.self=§4A new soul awakens. In this eternal cycle, you are but fleeting shadows, Runner. 
 commands.reroll.self.lock=Reroll locked.
