--- a/changelog.txt
+++ b/changelog.txt
@@ -1,10 +1,3 @@
-§lTREPIDATION v0.5.8.7§r
+§lTREPIDATION v0.5.9§r
 
-§eClick the version number on the main menu for full changelog.§r
-
-§a§lKnown Issues§r§r
-Multiplayer Only:
-- Players joining in multiplayer sessions do not spawn at the same place (reset run to fix this). Players also sometimes permanently spawn in different locations on each reset
-- Boss music will not play in multiplayer
-
-
+§eClick the version number on the main menu for known issues and changelog.§r
